--- a/game.css
+++ b/game.css
@@ -43,8 +43,22 @@
 .hud-prefix {
     text-align: center;
     font-size: 2rem;
+    font-weight: 700;
 }
 
 .hud-main-text {
     text-align: center;
+}
+
+#progressBar {
+    width: 20rem;
+    height: 4rem;
+    border: 0.3rem solid #56a5eb;
+    margin-top: 1.5rem;
+}
+
+#progressBarFull {
+    height: 3.4rem;
+    background-color: #56a5eb;
+    width: 0%; /* percentage of bar */
 }
