--- a/css/game.css
+++ b/css/game.css
@@ -62,3 +62,21 @@
     background-color: #56a5eb;
     width: 0%; /* percentage of bar */
 }
+
+#loader {
+    border: 1.6rem solid white;
+    border-radius: 50%;
+    border-top: 1.6rem solid #56a5eb;
+    width: 12rem;
+    height: 12rem;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin { /* @keyframes specifies the animation code. */
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
